# archives

./: README.md
jemcc/: AUTHORS  COPYRIGHT  ChangeLog  Makefile.am  Makefile.vsc  README.md  acinclude.m4  compjemcc.awk  configure.in
jemcc/include/: jemcc.h  jni.h  jnitypes.h.in  jnitypes.w32
jemcc/src/: Makefile.am  Makefile.vsc
jemcc/src/engine/: Makefile.am  Makefile.vsc  jemccvm.c
jemcc/src/engine/classes/: Makefile.am  Makefile.vsc  array.c  class.c  classloader.c  exceptions.c  init.c  object.c  runnable.c  string.c  stringbuffer.c  sysclassloader.c  throwable.c
jemcc/src/engine/classes/reflect/: Makefile.am  array.c  constructor.c  exceptions.c  field.c  member.c  method.c  modifier.c  reflect.c
jemcc/src/engine/core/: Makefile.am  Makefile.vsc  class.c  classlinker.c  classparser.c  classverifier.c  cpu.c  exception.c  hash.c  jemcc.c  memgc.c  numerics.c  opcodes.c  package.c  paths.c  string.c  sundry.c  vmclass.c
jemcc/src/engine/include/: class.h  cpu.h  jem.h  jemcc.h  jeminc.h  jnifunc.h  jvmenv.h  numerics.h  sysenv.h  vmclasses.h
jemcc/src/engine/jni/: Makefile.am  array.c  class.c  exception.c  field.c  invoke.c  machine.c  method.c  object.c  stdargfn.c  string.c
jemcc/src/engine/sysenv/: Makefile.am  Makefile.vsc  dynalib.c  ffi.c  fficall.S  file.c  objmonitor.c  sysctrl.h.in  sysmonitor.c  thread.c  zipfile.c
jemcc/src/engine/sysenv/ia32/: ffi.c  fficall.s  monitors.h
jemcc/src/engine/sysenv/sparc32/: ffi.c  fficall.s  monitors.h
jemcc/testsuite/: Makefile.am  Makefile.vsc
jemcc/testsuite/indigo/: HelloWorld.java  Makefile.am  README.md  cprun.sh  jemcc-static.c  test.java
jemcc/testsuite/indigo/wrdg/indigo/linker/: Circularity.java  Hierarchies.java  Inheritance.java
jemcc/testsuite/indigo/wrdg/indigo/parser/: ClassAttributes.java  ClassDefinition.java  ConstantPool.java  Descriptor.java  FieldAttributes.java  Fields.java  Interfaces.java  MethodAttributes.java  MethodCode.java  Methods.java  TruncatedConstantPool.java
jemcc/testsuite/indigo/wrdg/indigo/runtime/: Cloning.java  Initialization.java
jemcc/testsuite/internals/: Makefile.am  Makefile.vsc  classlinker.c  classmgmt.c  classparser.c  cpu.c  descriptor.c  ffi.c  ffitest.c  jemcc.c  libpkg.c  package.c  pathload.c  pkgtesta.c  pkgtestb.c  pkgtestc.c  string.c  thrmon.c  utility.c  uvminit.c  vlinktbl.c  zipfile.c
jemcc/testsuite/mauve/: Makefile.am  cprun.sh  jemcc-static.c  test.java  vmtestinterface.c
jemcc/testsuite/mauve/wrdg/mauve/: JEMCCTestHarness.java  TestTestlet.java  VMTestInterface.java
jemcc/testsuite/mauve/wrdg/mauve/java/lang/String/: string.java
jemcc/testsuite/mauve/wrdg/mauve/java/lang/StringBuffer/: stringbuffer.java
jemcc/testsuite/mauve/wrdg/mauve/java/lang/reflect/: FullAccess.java  HierTest.java
jemcc/testsuite/mauve/wrdg/mauve/java/lang/reflect/Constructor/: constructor.java
jemcc/testsuite/mauve/wrdg/mauve/java/lang/reflect/Field/: field.java
jemcc/testsuite/mauve/wrdg/mauve/java/lang/reflect/Method/: method.java
jemcc/testsuite/mauve/wrdg/mauve/java/lang/reflect/Modifier/: modifier.java
jemcc/tools/: Makefile.am  Makefile.vsc  jemcc_builder.c
jemcc/win32/: MakeRules.vsc
splotch/: AUTHORS  COPYRIGHT  ChangeLog  Makefile.am  README.md  configure.in  header
splotch/drivers/: Makefile.am  common.c  drv_test.sdvi  drv_test.uu  sdvi.h  shade_test.sdvi  shade_test.uu
splotch/drivers/dev_bm/: Makefile.am  patterns.h  sp_bm.1  sp_bm.c  sp_bm.h
splotch/drivers/dev_ps/: Makefile.am  sp_ps.1  sp_ps.c
splotch/drivers/dev_tty/: Makefile.am  sp_tty.1  sp_tty.c
splotch/drivers/dev_vec/: Makefile.am  sp_vec.1  sp_vec.c
splotch/drivers/dev_x/: Makefile.am  Makefile.orig  shades.xbm  sp_x.1  sp_x.c  splotch.xbm  splotch.xcurs  testcol.sh
splotch/examples/: advert.sp  animation.sp  curveball.data  curveball.sp  piechart.sp  readme  runme  screen.back.in  screen.front.in
splotch/old/: Makefile  README.drivers  README.install  VER2.notes
splotch/src/: Makefile.am  fonts.h  localdefs.h.in  sp3d.c  space.c  sparkle.c  sparkle.h  sparse.c  spastic.c  spastic.h  spatial.c  spawn.c  speak.c  special.c  specific.c  spin.c  spindle.c  spinster.h  spline.c  splotch.1  splotch.c  splotch.dft  splotch.fnt  splotch.h  splotchy.c  spoof.h  sprocket.c  spuds.c  sputter.c  version.h
